# V2PH-Downloader

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
scripts/: README.md  _audit_avatars.py  backfill_album_profiles.py  smoke_collision.py  smoke_listing_name.py  smoke_manager.py  smoke_profiles.py  smoke_real_html.py  sync_actors_profile.py  sync_companies_profile.py  sync_local.py  v2dl-sync.ps1
tests/: test_scraper.py
v2dl/: __init__.py  version.py
v2dl/cli/: option.py
v2dl/common/: const.py  model.py  utils.py
v2dl/scraper/: core.py  manager.py  profiles.py  tools.py
v2dl/security/: main.py
v2dl/web_bot/: base.py  drission_bot.py  selenium_bot.py
webapp/: README.md  __init__.py  app.py  config.py  db.py  i18n.py  media.py  migrate.py  reset_password.py  run_remote.ps1  todo.txt  users.py
webapp/static/css/: style.css
webapp/static/js/: app.js
webapp/templates/: 404.html  _macros.html  account.html  album.html  base.html  checkout.html  favorites.html  forgot.html  history.html  index.html  login.html  model.html  models.html  pricing.html  region.html  register.html  reset.html  search.html  tag.html  tags.html  vendor.html  vendors.html
webapp/templates/admin/: dashboard.html  users.html
webapp/templates/partials/: albums.html  models.html  vendors.html
